@@ -1,0 +1,27 @@
+#' @importFrom qpdf pdf_combine
+#' @rdname qpdf
+#' @name qpdf
+#' @title qpdf utilities
+#' @family pdftools
+#' @export
+qpdf::pdf_combine
+
+#' @importFrom qpdf pdf_compress
+#' @rdname qpdf
+#' @export
+qpdf::pdf_compress
+
+#' @importFrom qpdf pdf_length
+#' @rdname qpdf
+#' @export
+qpdf::pdf_length
+
+#' @importFrom qpdf pdf_split
+#' @rdname qpdf
+#' @export
+qpdf::pdf_split
+
+#' @importFrom qpdf pdf_subset
+#' @rdname qpdf
+#' @export
+qpdf::pdf_subset
