@@ -1,6 +1,7 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/render.R
-\name{pdf_render_page}
+\name{rendering}
+\alias{rendering}
 \alias{pdf_render_page}
 \alias{render}
 \alias{pdf_convert}
@@ -71,6 +72,6 @@ webp::write_webp(bitmap_raw, "page.webp")
 }
 }
 \seealso{
-Other pdftools: \code{\link{pdf_info}}
+Other pdftools: \code{\link{pdftools}}, \code{\link{qpdf}}
 }
 \concept{pdftools}
