@@ -1,8 +1,8 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/tools.R
-\name{pdf_info}
-\alias{pdf_info}
+\name{pdftools}
 \alias{pdftools}
+\alias{pdf_info}
 \alias{pdf_text}
 \alias{pdf_data}
 \alias{pdf_fonts}
@@ -61,6 +61,6 @@ fonts <- pdf_fonts(pdf_file)
 files <- pdf_attachments(pdf_file)
 }
 \seealso{
-Other pdftools: \code{\link{pdf_render_page}}
+Other pdftools: \code{\link{qpdf}}, \code{\link{rendering}}
 }
 \concept{pdftools}
